--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   pointer-events: none;
 }
 
+.CodeMirror {
+  text-align: left;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
