--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: transparent !important;
+ /* background-color: transparent !important;*/
 }
 
 code {
@@ -14,7 +14,7 @@ code {
 }
 
 #root{
-  background-color: transparent !important;
+  /*background-color: transparent !important;*/
 }
 
 /* 
